change home to index

--- a/Payment.html
+++ b/Payment.html
@@ -1,10 +1,6 @@
 <?xml version = ″1.0″ encoding = ″utf-8″ ?>
 <!DOCTYPE html PUBLIC ″-//W3C//DTD XHTML 1.0 Strict//EN″ http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd>
 <html xmlns=″http://www.w3.org/1999/xhtml″>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">
-</script>
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -119,10 +115,10 @@
 
 
         <ul>
-          <li><a href="Home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="Products.html">Products</a></li>
           <li><a class="active" href="Payment.html">Payment</a></li>
-          <li><a href="AboutUs.html">Abous Us</a></li>
+          <li><a href="AboutUs.html">About Us</a></li>
           <li><a href="Contact_Us.html">Contact Us</a></li>
           <li><a href="Login.html">Login</a></li>
           <li><a href="SignUp.html">Sign Up </a></li>
