--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
 
         <ul>
-          <li><a class="active" href="Home.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="Products.html">Products</a></li>
           <li><a href="Payment.html">Payment</a></li>
-          <li><a href="AboutUs.html">Abous Us</a></li>
+          <li><a href="AboutUs.html">About Us</a></li>
           <li><a href="Contact_Us.html">Contact Us</a></li>
           <li><a href="Login.html">Login</a></li>
           <li><a href="SignUp.html">Sign Up </a></li>
