--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -24,10 +24,10 @@
 
 
         <ul>
-          <li><a href="Home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="Payment.html">Payment</a></li>
-          <li><a href="AboutUs.html">Abous Us</a></li>
+          <li><a href="AboutUs.html">About Us</a></li>
           <li><a class="active" href="Contact_Us.html">Contact Us</a></li>
           <li><a href="Login.html">Login</a></li>
           <li><a href="SignUp.html">Sign Up </a></li>
