--- a/Products.html
+++ b/Products.html
@@ -227,7 +227,7 @@
 
 
         <ul style="padding-left: 60px; padding-top: 35px;">
-          <li><a href="Home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a class="active" href="Products.html">Products</a></li>
           <li><a href="Payment.html">Payment</a></li>
           <li><a href="AboutUs.html">About Us</a></li>
