add more bootstrap

--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">
 </script>
 
-
 <head>
     <title>Picnicker | Login</title>
     <link rel="stylesheet" href="formStyle.css">
@@ -51,7 +50,7 @@
                 <label for="pwd">Enter your password:</label>
                 <input type="password" placeholder="Enter password" name="pswd" required>
 
-                <input type="submit" class="btn btn-success" value="LOGIN">
+                <input type="submit" class="btn btn-outline-dark" value="LOGIN">
 
             </form>
         </div>
