--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </p>
     </div>
     <div>
-      <img src="img/picnicImg1.jpg" alt="Picture of comets" width="470" height="300" style="float:left;" />
-      <img src="img/picnicImg2.jpg" alt="Picture of comets" width="470" height="300" style="float:right;" />
+      <img src="img/picnicImg1.jpg" alt="Picture of comets" width="470" height="300" class="float-start;" />
+      <img src="img/picnicImg2.jpg" alt="Picture of comets" width="470" height="300"  class="float-end" />
     </div>
   </div>
 
