--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -65,7 +65,7 @@
       <label for="subject">Comment</label>
       <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-      <input type="submit" value="Submit">
+      <input type="submit" class="btn btn-outline-dark" value="Submit">
     </form>
   </div>
 
