--- a/Payment.html
+++ b/Payment.html
@@ -7,46 +7,36 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
 
-
-
   <style>
     body {
       font-family: Arial;
       font-size: 17px;
     }
-
     * {
       box-sizing: border-box;
     }
-
     .row {
       display: flex;
       margin: 0 -16px;
     }
-
     .col-25 {
       flex: 25%;
       padding: 0 16px;
     }
-
     .col-50 {
       flex: 50%;
       padding: 0 16px;
-
     }
-
     .col-75 {
       flex: 75%;
       padding: 0 16px;
     }
-
     .container {
       background-color: #f2f2f2;
       padding: 5px 20px 15px 20px;
       border: 1px solid lightgrey;
       border-radius: 3px;
     }
-
     input[type=text] {
       width: 100%;
       margin-bottom: 20px;
@@ -54,18 +44,15 @@
       border: 1px solid #ccc;
       border-radius: 3px;
     }
-
     label {
       margin-bottom: 10px;
       display: block;
     }
-
     .icon-container {
       margin-bottom: 20px;
       padding: 7px 0;
       font-size: 24px;
     }
-
     input[type=submit] {
       background-color: rgb(100, 99, 100);
       color: white;
@@ -73,30 +60,27 @@
       border: none;
       border-radius: 20px;
       cursor: pointer;
-
     }
-
     input[type=submit]:hover {
       background-color: rgb(27, 26, 27);
     }
-
     a {
       color: #2196F3;
     }
-
-
     span.price {
       float: right;
       color: rgb(116, 36, 36);
     }
 
-    /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top
- of each other instead of next to each other (also change the direction - make the "cart" column go on top) */
+  /* Responsive layout - when the screen is
+  less than 800px wide, make the two columns 
+  stack on top of each other instead of next
+  to each other (also change the direction 
+   - make the "cart" column go on top) */
     @media (max-width: 800px) {
       .row {
         flex-direction: column-reverse;
       }
-
       .col-25 {
         margin-bottom: 20px;
       }
