--- a/SignUp.html
+++ b/SignUp.html
@@ -42,8 +42,6 @@
       <label for="FirstName">First Name:</label>
       <input type="text" placeholder="Enter First Name" name="FirstName" required>
 
-
-
       <label for="LastName">Last Name:</label>
       <input type="text" placeholder="Enter Last Name" name="LastName" required>
 
@@ -56,15 +54,8 @@
       <label for="psw-repeat">Repeat Password:</label>
       <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" checked="checked" name="remember"> Remember me </label>
-
-
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-
-      <input type="reset" value="Cancel">
-      <input type="submit" value="Sign Up">
+      <input type="reset" class="btn btn-outline-dark" value="Cancel">
+      <input type="submit" class="btn btn-outline-dark" value="Sign Up">
     </form>
   </div>
 
