--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+<?xml version = ″1.0″ encoding = ″utf-8″ ?>
+<!DOCTYPE html PUBLIC ″-//W3C//DTD XHTML 1.0 Strict//EN″ http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd>
+<html xmlns=″http://www.w3.org/1999/xhtml″>
 
 <head>
   <title>Picnicker | About Us</title>
@@ -30,15 +31,18 @@
           <li><a href="Contact_Us.html">Contact Us</a></li>
           <li><a href="Login.html">Login</a></li>
           <li><a href="SignUp.html">Sign Up </a></li>
+          <li><a href="funPage.html">Fun</a></li>
+          <li><a href="Questionnaire.html">Questionnaire</a></li>
+          <li><a href="Product_List.html">Product List </a></li>
         </ul>
       </nav>
     </div>
   </div>
 
   <div id="Q1" style="padding-bottom: 200px;">
-    <h1
-      style="padding-top: 35px; padding-bottom: 10px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-      We are making your picnic time a wonderful and happy.</h1>
+    <h2
+      style="padding-top: 35px; padding-bottom: 10px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
+      We are making your picnic time a wonderful and happy.</h2>
     <p>Picnic time is one of the most favorite times for humans. It
       refreshes them because it breaks the monotony of life.
       It helps them release some of the pent up stress.
@@ -48,9 +52,9 @@
       Our main goal is to provide products at a competitive price with fast delivery.
       Building trust and preserving customers' rights is our first priority.
     </p>
-    <h1
+    <h2
       style="padding-top: 35px; padding-bottom: 10px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-      What makes you trust us?</h1>
+      What makes you trust us?</h2>
     <ul>
       <li>All the product specifications are clarified.</li>
       <li> Transparency; profit rate, product price and delivery charges have
