--- a/SignUp.html
+++ b/SignUp.html
@@ -29,6 +29,9 @@
           <li><a href="Contact_Us.html">Contact Us</a></li>
           <li><a href="Login.html">Login</a></li>
           <li><a class="active" href="SignUp.html">Sign Up </a></li>
+          <li><a href="funPage.html">Fun</a></li>
+          <li><a href="Questionnaire.html">Questionnaire</a></li>
+          <li><a href="Product_List.html">Product List </a></li>
         </ul>
       </nav>
     </div>
