--- a/Login.html
+++ b/Login.html
@@ -34,6 +34,9 @@
                     <li><a href="Contact_Us.html">Contact Us</a></li>
                     <li><a class="active" href="Login.html">Login</a></li>
                     <li><a href="SignUp.html">Sign Up </a></li>
+                    <li><a href="funPage.html">Fun</a></li>
+                    <li><a href="Questionnaire.html">Questionnaire</a></li>
+                    <li><a href="Product_List.html">Product List </a></li>
                 </ul>
             </nav>
         </div>
