--- a/funPage.html
+++ b/funPage.html
@@ -64,6 +64,7 @@
         </nav>
       </div>
     </div>
+    <h1 style="text-align: center;">Challenge yourself and have fun!</h1>
     <div style="padding: 175px 300px 0px 700px ;">
     <table border="1">
       <tr>
