--- a/Login.html
+++ b/Login.html
@@ -36,6 +36,7 @@
                     <li><a href="SignUp.html">Sign Up </a></li>
                     <li><a href="funPage.html">Fun</a></li>
                     <li><a href="Questionnaire.html">Questionnaire</a></li>
+                    <li><a href="Suggestion.html">Suggestion</a></li>
                     <li><a href="Product_List.html">Product List </a></li>
                 </ul>
             </nav>
@@ -45,10 +46,10 @@
     <h3 style="text-align: center;">login form</h3>
     <div class="box">
         <div class="container">
-            <form action="/action_page.php" class="was-validated">
+            <form action="login.php"method="POST">
 
-                <label for="email">Enter your email address:</label>
-                <input type="text" placeholder="Enter email" name="email" required>
+                <label for="name">Enter your name:</label>
+                <input type="text" placeholder="Enter Your Name" name="name" required>
 
                 <label for="pwd">Enter your password:</label>
                 <input type="password" placeholder="Enter password" name="pswd" required>
