--- a/Products.html
+++ b/Products.html
@@ -224,6 +224,7 @@
           <li><a href="SignUp.html">Sign in </a>
           <li><a href="funPage.html">Fun</a></li>
           <li><a href="Questionnaire.html">Questionnaire</a></li>
+          <li><a href="Suggestion.html">Suggestion</a></li>
           <li><a href="Product_List.html">Product List </a></li>
         </ul>
       </nav>
