--- a/SignUp.html
+++ b/SignUp.html
@@ -31,6 +31,7 @@
           <li><a class="active" href="SignUp.html">Sign Up </a></li>
           <li><a href="funPage.html">Fun</a></li>
           <li><a href="Questionnaire.html">Questionnaire</a></li>
+          <li><a href="Suggestion.html">Suggestion</a></li>
           <li><a href="Product_List.html">Product List </a></li>
         </ul>
       </nav>
@@ -40,7 +41,7 @@
   <h3 style="text-align: center;">Sign Up</h3>
 
   <div class="container">
-    <form action="action_page.php">
+    <form action="signUp.php" method="POST">
       <p>Please fill in this form to create an account.</p>
       <label for="FirstName">First Name:</label>
       <input type="text" placeholder="Enter First Name" name="FirstName" required>
