--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ img {vertical-align: middle;}
           <li><a href="SignUp.html">Sign Up </a></li>
           <li><a href="funPage.html">Fun</a></li>
           <li><a href="Questionnaire.html">Questionnaire</a></li>
+          <li><a href="Suggestion.html">Suggestion</a></li>
           <li><a href="Product_List.html">Product List </a></li>
         
         </ul>
