--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,6 +33,7 @@
           <li><a href="SignUp.html">Sign Up </a></li>
           <li><a href="funPage.html">Fun</a></li>
           <li><a href="Questionnaire.html">Questionnaire</a></li>
+          <li><a href="Suggestion.html">Suggestion</a></li>
           <li><a href="Product_List.html">Product List </a></li>
         </ul>
       </nav>
