--- a/funPage.html
+++ b/funPage.html
@@ -56,9 +56,8 @@
             <li><a href="Login.html">Login</a></li>
             <li><a href="SignUp.html">Sign Up </a></li>
             <li><a class="active"  href="funPage.html">Fun</a></li>
-            <li>
-              <a href="Questionnaire.html">Questionnaire</a>
-            </li>
+            <li><a href="Questionnaire.html">Questionnaire</a></li>
+            <li><a href="Suggestion.html">Suggestion</a></li>
             <li><a href="Product_List.html">Product List </a></li>
           </ul>
         </nav>
